# suPAErnova

./: .gitconfig  .gitignore  .gitmodules  README.md  jupyter  profile.html  profile.json  pyproject.toml  requirements.txt  run  test
examples/: README.md
examples/DATA/callbacks/: callbacks.ipynb
examples/DATA/notebook/: DATA.ipynb
examples/DATA/notebooks/callbacks/: DATACallbacks.ipynb
examples/DATA/notebooks/overview/: DATA.ipynb
examples/DATA/script/: DATA.toml
examples/DATA/script/callbacks/: get_dims.py  load_data.py  result.py  setup.py  split_train_test.py  transform_data.py  validate.py
examples/DATA/scripts/overview/: DATA.toml
examples/DATA/scripts/overview/callbacks/: calculate_laser_line_mask.py  calculate_salt_flux.py  calculate_wavelength_mask.py  finalise_data.py  run.py
examples/NFLOW/: README.md
examples/NFLOW/TF_NFLOW/scripts/overview/: TF_NFLOW.toml
examples/PAE/: README.md
examples/PAE/TF_PAE/notebooks/callbacks/: TF_PAECallbacks.ipynb
examples/PAE/TF_PAE/notebooks/overview/: TF_PAE.ipynb
examples/PAE/TF_PAE/scripts/overview/: TF_PAE.toml
examples/PAE/TF_PAE/scripts/overview/callbacks/: analyse.py  setup_activation.py  setup_loss.py  setup_optimiser.py  setup_scheduler.py  train_all.py  train_amplitude.py  train_colour.py  train_latents.py  train_model.py  train_time.py
examples/POSTERIOR/: README.md
examples/POSTERIOR/TF_POSTERIOR/scripts/overview/: TF_POSTERIOR.toml
examples/TF_PAE/: README.md
examples/TF_PAE/script/: TF_PAE.toml
examples/prepare_data/: prepare_data.toml
notebooks/: salt_model_make_dataset.ipynb  use_PAE_model.ipynb
src/_suPAErnova/: __init__.py
src/_suPAErnova/analysis/pae/: __init__.py
src/_suPAErnova/config/: data.py
src/_suPAErnova/config/pae/: tf_pae.py
src/_suPAErnova/model_utils/pae/: __init__.py
src/_suPAErnova/model_utils/pae/tf_pae/: __init__.py  tf_optimisers.py
src/_suPAErnova/models/pae/: __init__.py  tf_pae.py
src/_suPAErnova/steps/: data.py
src/_suPAErnova/steps/pae/: __init__.py
src/_suPAErnova/utils/: __init__.py  suPAErnova_types.py
src/old_suPAErnova/models/: autoencoder_training.py  losses.py
src/old_suPAErnova/scripts/: train_ae.py
src/suPAErnova/: __init__.py  __main__.py  data.py  steps.py  suPAErnova.py
src/suPAErnova/analysis/: __init__.py  data.py  tf_autoencoder.py
src/suPAErnova/analysis/pae/: tf_pae.py
src/suPAErnova/config/: __init__.py  autoencoder.py  data.py  model.py  requirements.py  tf_autoencoder.py
src/suPAErnova/config/pae/: __init__.py  tf_pae.py
src/suPAErnova/configs/: __init__.py  config.py  configs.py  globals.py  input.py  paths.py
src/suPAErnova/configs/steps/: __init__.py  backends.py  data.py  model.py  nflow.py  pae.py  posterior.py  steps.py
src/suPAErnova/configs/steps/data/: __init__.py  data.py
src/suPAErnova/configs/steps/nflow/: __init__.py  model.py  nflow.py  tch.py  tf.py
src/suPAErnova/configs/steps/nflow/tch/: __init__.py
src/suPAErnova/configs/steps/nflow/tf/: __init__.py  tf.py
src/suPAErnova/configs/steps/pae/: __init__.py  model.py  pae.py  tch.py  tf.py
src/suPAErnova/configs/steps/pae/tch/: __init__.py  model.py
src/suPAErnova/configs/steps/pae/tf/: __init__.py  model.py  tf.py
src/suPAErnova/configs/steps/posterior/: __init__.py  model.py  posterior.py  tch.py  tf.py
src/suPAErnova/logging/: __init__.py  logging.py
src/suPAErnova/model_utils/: __init__.py  losses.py  tf_layers.py  tf_losses.py  tf_optimisers.py  tf_schedulers.py
src/suPAErnova/model_utils/pae/tf_pae/: tf_activations.py  tf_layers.py  tf_losses.py  tf_optimisers.py  tf_schedulers.py
src/suPAErnova/models/: __init__.py  tf_autoencoder.py
src/suPAErnova/models/pae/: tf_pae.py
src/suPAErnova/snpae_logging/: __init__.py
src/suPAErnova/steps/: __init__.py  autoencoder.py  backends.py  data.py  model.py  steps.py  tf_autoencoder.py
src/suPAErnova/steps/data/: __init__.py  data.py
src/suPAErnova/steps/nflow/: __init__.py  model.py  nflow.py  tch.py  tf.py
src/suPAErnova/steps/nflow/tch/: __init__.py  tch.py
src/suPAErnova/steps/nflow/tf/: __init__.py  tf.py
src/suPAErnova/steps/pae/: __init__.py  model.py  pae.py  tch.py  tf.py  tf_pae.py
src/suPAErnova/steps/pae/tch/: __init__.py  model.py  tch.py
src/suPAErnova/steps/pae/tf/: __init__.py  loss.py  model.py  tf.py
src/suPAErnova/steps/posterior/: __init__.py  model.py  posterior.py  tch.py  tf.py
src/suPAErnova/typings/: __init__.py
src/suPAErnova/utils/: logging.py  suPAErnova_logging.py  typing.py
src/supaernova/: __init__.py  data.py  steps.py
src/supaernova/utils/: logging.py
tests/: conftest.py
tests/fixtures/: paths.py
tests/fixtures/data/: data.py  legacy.py  snpae.py
tests/fixtures/pae/: legacy.py  snpae.py
tests/test_parity/fixtures/: data_step.py
tests/test_parity/test_data_step_parity/: conftest.py  test_data_step_parity.py
tests/test_parity/test_pae_step_parity/: test_pae_step_parity.py
tests/test_supaernova/test_parity/: __init__.py  test_data_step_parity.py
tests/tests/paper_parity/: conftest.py
tests/tests/paper_parity/data/: test_data.py
tests/tests/paper_parity/fixtures/: pae_step.py
tests/tests/paper_parity/pae/: test_pae.py
