[project]
name = "suPAErnova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Armstrong", email = "patrick.james.1998@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.0.1",
    "click>=8.1.8",
    "coloredlogs>=15.0.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "sncosmo>=2.12.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["pandas-stubs>=2.2.3.241126", "types-tensorflow>=2.18.0.20241227"]

default = [
    "tensorflow>=2.18.0",
    "tensorflow-probability>=0.25.0",
    "tf-keras>=2.18.0",
]

# 2.17.0 is the latest version available for ROCM 6.3
rocm = [
    "tensorflow-rocm>=2.17.0,<2.18",
    "tensorflow-probability>=0.24.0,<0.25",
    "tf-keras>=2.17.0,<2.18",
]


[project.scripts]
suPAErnova = "suPAErnova:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# === Tools ===

[tool.uv]
conflicts = [[{ group = "default" }, { group = "rocm" }]]
default-groups = [
    "dev",
    "rocm",
] # Change me to your preferred tensorflow version

[[tool.uv.dependency-metadata]]
name = "tf-keras"
version = "2.17.0"
requires-dist = [
] # Hack to remove tf-keras tensorflow dependency when using tensorflow-rocm

[tool.uv.sources]
tensorflow-rocm = { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-6.3.2/tensorflow_rocm-2.17.0-cp312-cp312-manylinux_2_28_x86_64.whl" }

[tool.basedpyright]
extends = "../../pyproject.toml"

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint]
logger-objects = ["suPAErnova.utils.suPAErnova_logging"]
